--- a/widgets/jenkins/jenkins.html
+++ b/widgets/jenkins/jenkins.html
@@ -4,7 +4,7 @@
       <img data-bind-src="item.health"></img>
     </span>
     <span class="line-item name" data-bind="item.name">&nbsp;</span>
-    <span class="line-item desc" data-bind="item.desc | default '&nbsp;'">&nbsp;</span>
+    <!-- <span class="line-item desc" data-bind="item.desc | default '&nbsp;'">&nbsp;</span> -->
     <span data-bind="item.status"
           data-bind-class="item.color | prepend 'line-item status '">&nbsp;</span>
     <span class="line-item coverage"
