Changed jenkins last commit widget style to be consistent with other widgets.

--- a/widgets/jenkinslastcommit/jenkinslastcommit.html
+++ b/widgets/jenkinslastcommit/jenkinslastcommit.html
@@ -14,4 +14,4 @@
   </li>
 </ul>
 
-<p class="updated-at" data-bind="updatedAtMessage"></p>
+<!-- <p class="updated-at" data-bind="updatedAtMessage"></p> -->
