Added elapsed time of last successful job.

--- a/widgets/jenkins/jenkins.html
+++ b/widgets/jenkins/jenkins.html
@@ -9,5 +9,7 @@
           data-bind-class="item.color | prepend 'line-item status '">&nbsp;</span>
     <span class="line-item coverage"
           data-bind="item.coverage | default '&nbsp;' ">&nbsp;</span>
+    <span class="line-item elapsed"
+          data-bind="item.elapsed | default '&nbsp;' ">&nbsp;</span>
   </li>
 </ul>
